--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --orange-gradient: linear-gradient(270deg, #ffb978 0%, #ff922d 100%);
   --blue: #4066ff;
   --lightBlue: #eeeeff;
+  --cyan-blue: #18232b;
   --shadow: 0px 23px 21px -8px rgba(136, 160, 255, 0.25);
 }
 
@@ -80,6 +81,21 @@ a {
   color: orange;
   font-size: 1.5rem;
   font-weight: 600;
+}
+
+.button {
+  font-weight: 500;
+  padding: 0.6rem 1.4rem;
+  color: white;
+  background: var(--blue-gradient);
+  border: none;
+  border-radius: 4px;
+  transition: all 300ms ease-in;
+}
+
+.button:hover {
+  cursor: pointer;
+  transform: scale(1.1);
 }
 
 /* media queries */
