--- a/src/components/Value/Value.css
+++ b/src/components/Value/Value.css
@@ -23,3 +23,28 @@
   overflow: hidden;
   margin-bottom: 20px;
 }
+
+.accordionItem.expanded{
+  box-shadow: var(--shadow);
+  border-radius: 6px;
+}
+
+.accordionButton{
+   background: #ffffff;
+   padding: 1rem;
+   width: 100%;
+   justify-content: space-between;
+   cursor: pointer;
+}
+
+.icon{
+  padding: 10px;
+  background: #eeeeff;
+  border-radius: 5px;
+}
+.icon svg{
+  fill: var(--blue);
+}
+.accordionButton .primaryText{
+  font-size: 1.1rem;
+}
