--- a/src/index.css
+++ b/src/index.css
@@ -86,7 +86,7 @@ a {
 .button {
   font-weight: 500;
   padding: 0.6rem 1.4rem;
-  color: white;
+  color: #ffffff;
   background: var(--blue-gradient);
   border: none;
   border-radius: 4px;
@@ -99,9 +99,9 @@ a {
 }
 
 /* media queries */
-@media (min-width: 1536px) {
+@media (min-width: 1366px) {
   .innerWidth {
-    max-width: 1280px;
+    max-width: 1160px;
     margin: auto;
   }
 }
