--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .h-wrapper {
   color: white;
+  z-index: 99;
 }
 
 .h-container {
@@ -9,11 +10,36 @@
   color: var(--secondary);
 }
 
-
 .h-menu {
   gap: 2rem;
 }
 
-.h-menu>*:hover {
+.h-menu > *:hover {
   cursor: pointer;
+}
+
+.menu-icon {
+  display: none;
+}
+
+@media (max-width: 768px) {
+  .menu-icon {
+    display: block;
+  }
+  .h-menu {
+    z-index: 99;
+    color: var(--black);
+    position: absolute;
+    top: 3rem;
+    right: 4rem;
+    flex-direction: column;
+    background: #fff;
+    font-weight: 500;
+    gap: 2rem;
+    padding: 3rem;
+    border-radius: 10px;
+    align-items: flex-start;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+    transition: all 300ms ease-in;
+  }
 }
