--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,10 +2,11 @@
   color: #ffffff;
   position: relative;
   padding-bottom: 2rem;
+  z-index: 1;
 }
 
 .hero-container {
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: flex-end;
 }
 
@@ -31,8 +32,8 @@
   background: var(--orange-gradient);
   border-radius: 999px;
   position: absolute;
-  right: 0%;
-  top: -20%;
+  right: 28%;
+  top: -10%;
   z-index: -1;
 }
 
@@ -48,6 +49,8 @@
 .search-bar > input {
   border: none;
   outline: none;
+  margin-left: 0;
+  padding-left: 0;
 }
 
 .stats {
@@ -77,4 +80,31 @@
 .image-container > img {
   width: 100%;
   height: 100%;
+}
+
+@media (max-width: 640px) {
+  .hero-container {
+    margin-top: 2rem;
+  }
+  .hero-title > h1 {
+    font-size: 2.6rem;
+    line-height: 3rem;
+  }
+  .image-container {
+    width: 95%;
+    height: 25rem;
+  }
+  .stats {
+    justify-content: center;
+    gap: 1.5rem;
+  }
+  .hero-right {
+    width: 100%;
+  }
+  .stat > :nth-child(1) {
+    font-size: 1.5rem;
+  }
+  .stat > :nth-child(2) {
+    font-size: 0.8rem;
+  }
 }
