--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,9 @@
   font-family: "Poppins", sans-serif;
   scroll-behavior: smooth;
 }
+.wrapper {
+  background-color: #ffffff;
+}
 a {
   color: inherit;
   text-decoration: none;
